--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     function checkPassword() {
       var password = document.getElementById("password").value;
       if (password === "costellazione") { 
-        window.location.href = "pagina.html"; // pagina protetta
+        window.location.href = "https://drive.google.com/file/d/1Hq-8KddNq0ZKtj4AdIosdKW96RX1UX8w/view?usp=drive_link"; // pagina protetta
       } else {
         alert("Password errata!");
       }
