--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Qui metti il link della tua immagine -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Star_icon-72a7cf.svg/512px-Star_icon-72a7cf.svg.png" alt="Logo">
+    <!-- 🔗 Logo dal tuo Google Drive -->
+    <img src="https://drive.google.com/uc?export=view&id=1SV5-7GaRP-_s5i1OeHoxwectj4yecur7" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
     <input type="password" id="password" placeholder="Password"><br>
