--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     function checkPassword() {
       var password = document.getElementById("password").value;
       if (password === "costellazione") {
-        window.location.href = "https://earth.google.com/web/data=MkEKPwo9CiExQWxZRDc4eEJOXzhoWHRHNlY1a2F4LXd5d0RPandIcmgSFgoUMEMzQ0E3RDZGNjM5Rjk3QkU5NDYgAUICCABKBwinteleEAE?authuser=1";
+        window.location.href = "pagina.html"; // reindirizza alla pagina protetta
       } else {
         alert("Password errata!");
       }
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo dal tuo Google Drive -->
+    <!-- 🔗 Logo da Google Drive -->
     <img src="https://drive.google.com/uc?export=view&id=1SV5-7GaRP-_s5i1OeHoxwectj4yecur7" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
