--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo da Google Drive -->
-    <img src="https://drive.google.com/uc?export=view&id=1SV5-7GaRP-_s5i1OeHoxwectj4yecur7" alt="Logo">
+    <!-- 🔗 Logo caricato su GitHub -->
+    <img src="Timbro Caccia.jpeg" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
     <input type="password" id="password" placeholder="Password"><br>
