--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo caricato su GitHub -->
-    <img src="Timbro Caccia.jpeg" alt="Logo">
+    <!-- 🔗 Logo caricato su GitHub senza spazi nel nome -->
+    <img src="timbro-caccia.jpeg" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
     <input type="password" id="password" placeholder="Password"><br>
