--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
   <script>
     function checkPassword() {
       var password = document.getElementById("password").value;
-      if (password === "costellazione") {
-        window.location.href = "pagina.html"; // reindirizza alla pagina protetta
+      if (password === "pleopodi") {
+        window.location.href = "pagina-segreta.html"; // reindirizza alla pagina protetta
       } else {
         alert("Password errata!");
       }
@@ -65,7 +65,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo caricato su GitHub senza spazi nel nome -->
+    <!-- 🔗 Logo caricato su GitHub -->
     <img src="timbro-caccia.jpeg" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
