--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       align-items: center;
       font-family: "Times New Roman", serif;
       font-style: italic; /* corsivo */
-      background: url("https://www.publicdomainpictures.net/pictures/320000/velka/parchment-paper.jpg") no-repeat center center fixed;
-      background-size: cover; /* sfondo pergamena */
+      background: url("https://www.publicdomainpictures.net/pictures/40000/velka/parchment-background.jpg") no-repeat center center fixed;
+      background-size: cover; /* sfondo pergamena antica */
     }
     .container {
       text-align: center;
-      background: rgba(255, 255, 255, 0.8); /* bianco trasparente per leggibilità */
+      background: rgba(255, 255, 255, 0.7); /* semi-trasparente per leggibilità */
       padding: 40px 30px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
@@ -30,12 +30,12 @@
     }
     h2 {
       margin-bottom: 20px;
-      color: #333;
+      color: #2c2c2c;
     }
     input[type="password"] {
       padding: 10px;
       width: 80%;
-      border: 1px solid #ccc;
+      border: 1px solid #8b5e3c;
       border-radius: 6px;
       margin-bottom: 15px;
       font-size: 16px;
@@ -43,7 +43,7 @@
     }
     button {
       padding: 10px 20px;
-      background-color: #8b5e3c; /* marrone pergamena */
+      background-color: #8b5e3c;
       color: white;
       border: none;
       border-radius: 6px;
@@ -69,7 +69,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo -->
+    <!-- 🔗 Logo caricato su GitHub -->
     <img src="timbro-caccia.jpeg" alt="Logo">
 
     <h2>Inserisci la password per entrare</h2>
