--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       align-items: center;
       font-family: "Times New Roman", serif;
       font-style: italic; /* corsivo */
-      background: url("https://www.publicdomainpictures.net/pictures/40000/velka/parchment-background.jpg") no-repeat center center fixed;
-      background-size: cover; /* sfondo pergamena antica */
+      background: url("pergamena.jpg") no-repeat center center fixed;
+      background-size: cover; /* adatta lo sfondo alla pagina */
     }
     .container {
       text-align: center;
-      background: rgba(255, 255, 255, 0.7); /* semi-trasparente per leggibilità */
+      background: rgba(255, 255, 255, 0.7); /* bianco trasparente per leggibilità */
       padding: 40px 30px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
@@ -60,7 +60,7 @@
     function checkPassword() {
       var password = document.getElementById("password").value;
       if (password === "pleopodi") {
-        window.location.href = "pagina-segreta.html"; // reindirizza alla pagina protetta
+        window.location.href = "pagina-segreta.html"; // reindirizza alla pagina segreta
       } else {
         alert("Password errata!");
       }
@@ -69,9 +69,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- 🔗 Logo caricato su GitHub -->
     <img src="timbro-caccia.jpeg" alt="Logo">
-
     <h2>Inserisci la password per entrare</h2>
     <input type="password" id="password" placeholder="Password"><br>
     <button onclick="checkPassword()">Entra</button>
