--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <script>
     function checkPassword() {
       var password = document.getElementById("password").value;
-      if (password === "pleopodi") {
+      if (password === "sessantanove") {
         window.location.href = "pagina-segreta.html"; // reindirizza alla pagina segreta
       } else {
         alert("Password errata!");
