--- a/pagina-segreta.html
+++ b/pagina-segreta.html
@@ -44,9 +44,9 @@
 <body>
   <div class="container">
     <h1>Benvenuto nella pagina segreta!</h1>
-    <p>Qui trovi il progetto di Google Earth:</p>
+    <p>Cacciatori cercate il vostro compenso:</p>
     <a href="https://earth.google.com/web/data=MkEKPwo9CiExQWxZRDc4eEJOXzhoWHRHNlY1a2F4LXd5d0RPandIcmgSFgoUMEMzQ0E3RDZGNjM5Rjk3QkU5NDYgAUICCABKBwinteleEAE?authuser=1" target="_blank">
-      🌍 Apri il progetto Google Earth
+       il tesoro esiste CERCATELO! 
     </a>
   </div>
 </body>
